2005-07-16  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/sitedlg.h,
	src/sitepage.cpp,
	src/termview.cpp,
	src/dialog.h,
	src/mainframe.h,
	src/emoticondlg.cpp,
	src/editfavdlg.cpp,
	src/view.cpp,
	src/appconfig.h,
	src/font.h,
	src/prefdlg.cpp,
	src/inputdialog.h,
	src/notebook.h,
	src/widget.h,
	src/listbox.h,
	src/telnetview.h,
	src/sitedlg.cpp,
	src/generalprefpage.h,
	src/sitelistdlg.h,
	src/mainframe.cpp,
	src/dialog.cpp,
	src/appconfig.cpp,
	src/sitepage.h,
	src/font.cpp,
	src/termview.h,
	src/site.h,
	src/emoticondlg.h,
	src/editfavdlg.h,
	src/inputdialog.cpp,
	src/view.h,
	src/notebook.cpp,
	src/widget.cpp,
	src/listbox.cpp,
	src/telnetview.cpp,
	src/sitelistdlg.cpp,
	src/generalprefpage.cpp,
	src/prefdlg.h,
	src/telnetcon.cpp:
	Add gcc specific #pragma to accelerate compilation.

	* src/mainframe.cpp (CMainFrame::NewCon), (CMainFrame::OnFont), 
	src/termview.cpp (CTermView::OnSize):
	Anti-alias font can be turned off now.

2005-07-16	FourDollars (Shih-yuan Lee)	<fourdollars@gmail.com>

	* src/termdata.cpp:
	* src/termview.cpp:
	Add horizontal align center.

2005-07-16  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termdata.cpp:
	Fix wrong color settings in default color table.

	* src/termview.cpp:
	Re-enable usage of m_CharPaddingX in character width calculation.
	Draw underlines of hyperlnks in different color.

	* src/site.cpp:
	* src/site.h:
	Add m_UseExternalTelnet and m_UseExternalSSH.

	* src/mainframe.cpp:
	Set proper hyperlink color on CTelnetView creation.

	* src/appconfig.cpp:
	Add hyperlink color settings.

	* src/telnetview.cpp (CTelnetView::OnKeyDown):
	Fix malfunction of keyboard input.

	* src/telnetcon.cpp (CTelnetCon::Connect), 
	(CTelnetCon::Close), (CTelnetCon::OnSocket):
	Add forkpty support and some bug fix.

	* configure.ac:
	Add -lutil to $LIBS.

2005-07-13  Jim Huang  <jserv@kaffe.org>

	* pcmanx-pure-gtk2.spec.in,
	configure.ac,
	Makefile.am:
	Generate package information with autotools.
